fix: Poprawa customer_name w całym szkoleniu
- DZIEN_1/02_data_import_exploration: Poprawiony schema z first_name + last_name
- DZIEN_2/02_medallion_architecture: Zaktualizowane komentarze (computed field)
- DZIEN_2/04_bronze_silver_gold_pipeline: Dodano tworzenie customer_name w Silver
- Wszystkie notebooki używają poprawnego schematu zgodnego z dataset/customers.csv

--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -558,10 +558,12 @@
    "outputs": [],
    "source": [
     "# Definicja schematu dla customers\n",
-    "# Struktura: customer_id (int), customer_name (string), email (string), country (string), registration_date (timestamp)\n",
+    "# Struktura: customer_id (int), first_name (string), last_name (string), email (string), city (string), country (string), registration_date (timestamp)\n",
     "customers_schema = StructType([\n",
     "    StructField(\"customer_id\", IntegerType(), nullable=False),\n",
-    "    StructField(\"customer_name\", StringType(), nullable=True),\n",
+    "    StructField(\"first_name\", StringType(), nullable=True),\n",
+    "    StructField(\"last_name\", StringType(), nullable=True),\n",
+    "    StructField(\"city\", StringType(), nullable=True),\n",
     "    StructField(\"email\", StringType(), nullable=True),\n",
     "    StructField(\"country\", StringType(), nullable=True),\n",
     "    StructField(\"registration_date\", TimestampType(), nullable=True)\n",
