fix: Poprawa customer_name w workshopach
- Workshop 01: Poprawiony schema (first_name, last_name, city)
- Workshop 02: Zamiana customer_name na first_name/customer_full_name
- Workshop 03 Dzień 3: Dodano first_name, last_name zamiast customer_name
- Wszystkie workshopy zgodne z rzeczywistym schematem dataset/customers.csv

--- a/DZIEN_1_Fundamentals_Exploration/workshops/02_transformations_cleaning_workshop.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/workshops/02_transformations_cleaning_workshop.ipynb
@@ -144,9 +144,9 @@
     "### Instrukcje:\n",
     "1. Dodaj kolumnę `email_domain` wyodrębniając domenę z email\n",
     "2. Dodaj kolumnę `country_code` z pierwszymi 2 literami kraju (uppercase)\n",
-    "3. Dodaj kolumnę `customer_name_clean` - trim i lowercase\n",
+    "3. Dodaj kolumnę `customer_full_name` - trim i lowercase\n",
     "4. Usuń kolumnę `registration_date` (jeśli istnieje)\n",
-    "5. Zmień nazwę kolumny `customer_name` na `full_name`\n",
+    "5. Zmień nazwę kolumny `first_name` na `customer_full_name`\n",
     "\n",
     "### Wskazówki:\n",
     "- Użyj: `withColumn()`, `regexp_extract()`, `substring()`, `trim()`, `lower()`, `drop()`, `withColumnRenamed()`"
@@ -171,18 +171,18 @@
     "    ____(col(\"____\").substr(1, ____))  # upper, country, 2\n",
     ")\n",
     "\n",
-    "# TODO: Dodaj kolumnę customer_name_clean (trim i lowercase)\n",
+    "# TODO: Dodaj kolumnę customer_full_name (trim i lowercase)\n",
     "customers_transformed = customers_transformed.withColumn(\n",
-    "    \"customer_name_clean\",\n",
-    "    ____(____(col(\"customer_name\")))  # lower, trim\n",
+    "    \"customer_full_name\",\n",
+    "    ____(____(col(\"first_name\")))  # lower, trim\n",
     ")\n",
     "\n",
     "# TODO: Usuń kolumnę registration_date (jeśli istnieje)\n",
     "if \"registration_date\" in customers_transformed.columns:\n",
     "    customers_transformed = customers_transformed.____(\"____\")  # drop, registration_date\n",
     "\n",
-    "# TODO: Zmień nazwę customer_name na full_name\n",
-    "customers_transformed = customers_transformed.____(\"customer_name\", \"____\")  # withColumnRenamed, full_name\n",
+    "# TODO: Zmień nazwę first_name na customer_full_name\n",
+    "customers_transformed = customers_transformed.____(\"first_name\", \"____\")  # withColumnRenamed, customer_full_name\n",
     "\n",
     "print(\"=== Przykładowe dane po transformacjach ===\")\n",
     "display(customers_transformed.limit(5))"
@@ -447,13 +447,13 @@
     "result = spark.sql(\"\"\"\n",
     "    SELECT \n",
     "        c.customer_id,\n",
-    "        c.customer_name,\n",
+    "        c.first_name,\n",
     "        c.country,\n",
     "        ____(____.order_id) as total_orders,  -- COUNT, o\n",
     "        SUM(o.____) as total_spent  -- total_amount\n",
     "    FROM ____ c  -- customers\n",
     "    ____ JOIN orders o ON c.customer_id = o.customer_id  -- LEFT\n",
-    "    GROUP BY c.customer_id, c.customer_name, c.country\n",
+    "    GROUP BY c.customer_id, c.first_name, c.country\n",
     "    ORDER BY ____ DESC  -- total_spent\n",
     "    LIMIT ____  -- 10\n",
     "\"\"\")\n",
@@ -663,7 +663,7 @@
     "    display(\n",
     "        customers_with_flags\n",
     "        .filter(col(\"____\") == 1)  # quality_flag\n",
-    "        .select(\"customer_id\", \"full_name\", \"email\", \"country\", \"quality_flag\")\n",
+    "        .select(\"customer_id\", \"customer_full_name\", \"email\", \"country\", \"quality_flag\")\n",
     "        .limit(5)\n",
     "    )\n",
     "else:\n",
