--- a/DZIEN_1_Fundamentals_Exploration/workshops/01_workspace_data_exploration_workshop.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/workshops/01_workspace_data_exploration_workshop.ipynb
@@ -237,7 +237,7 @@
     "\n",
     "### Oczekiwany rezultat:\n",
     "- DataFrame z danymi klientów\n",
-    "- Schemat zawierający kolumny: customer_id (int), customer_name (string), email (string), country (string), registration_date (timestamp)\n",
+    "- Schemat zawierający kolumny: customer_id (int), first_name (string), last_name (string), email (string), city (string), country (string), registration_date (timestamp)\n",
     "\n",
     "### Wskazówki:\n",
     "- Użyj `spark.read.format(\"csv\").option(\"header\", \"true\")`\n",
