modified:   DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb 	modified:   DZIEN_2_Lakehouse_Delta_Lake/04_bronze_silver_gold_pipeline.ipynb

--- a/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
@@ -2304,7 +2304,7 @@
     "    .join(silver_products, \"product_id\")\n",
     "    .select(\n",
     "        \"order_id\",\n",
-    "        \"customer_name\",  # From dim_customer\n",
+    "        \"customer_name\",  # From dim_customer (computed: first_name + last_name)\n",
     "        \"product_name\",   # From dim_product\n",
     "        \"total_amount\"\n",
     "    )\n",
@@ -2507,7 +2507,7 @@
     "gold_with_safeguard = (\n",
     "    silver_orders\n",
     "    .join(dim_customer, \"customer_id\", \"left\")  # Left join zamiast inner\n",
-    "    .withColumn(\"customer_name\", F.coalesce(F.col(\"customer_name\"), F.lit(\"UNKNOWN\")))\n",
+    "    .withColumn(\"customer_name\", F.coalesce(F.col(\"customer_name\"), F.lit(\"UNKNOWN\")))  # customer_name jest już w dim_customer (first_name + last_name)\n",
     ")\n",
     "```\n",
     "\n",
