--- a/DZIEN_2_Lakehouse_Delta_Lake/04_bronze_silver_gold_pipeline.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_bronze_silver_gold_pipeline.ipynb
@@ -14,7 +14,88 @@
     "- Silver: cleaning, deduplikacja, sanity checks, JSON flattening (from_json, explode)\n",
     "- Gold: KPI modeling, agregacje (daily/weekly/monthly), star schema vs denormalizacja\n",
     "- End-to-end data lineage\n",
-    "- Performance monitoring per warstwa"
+    "- Performance monitoring per warstwa\n",
+    "\n",
+    "# 04 - Bronze-Silver-Gold Pipeline - End-to-End Implementation\n",
+    "\n",
+    "## Agenda\n",
+    "\n",
+    "1. **Przegląd architektury Bronze-Silver-Gold**\n",
+    "2. **Bronze Layer:** Raw data ingestion\n",
+    "3. **Silver Layer:** Cleansing, standardization, schema enforcement\n",
+    "4. **Gold Layer:** Business-level aggregations & star schema\n",
+    "5. **Pipeline monitoring & lineage**\n",
+    "6. **Troubleshooting & best practices**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Czas trwania: ~90 min\n",
+    "\n",
+    "- **Setup:** 5 min\n",
+    "- **Teoria + Demo:** 60 min\n",
+    "- **Hands-on workshop:** 25 min\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Wymagania wstępne\n",
+    "\n",
+    "- Uruchomiony `00_setup.ipynb`\n",
+    "- Znajomość Delta Lake basics (notebook 01)\n",
+    "- Znajomość batch/streaming loads (notebook 03)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Kluczowe koncepcje\n",
+    "\n",
+    "**Bronze-Silver-Gold (Medallion Architecture):**\n",
+    "- **Bronze:** Raw data, minimal processing\n",
+    "- **Silver:** Cleansed, deduplicated, validated\n",
+    "- **Gold:** Business-level aggregates, star schema, BI-ready\n",
+    "\n",
+    "**Star Schema (Gold Layer):**\n",
+    "- **Fact Table:** Centralna tabela z metrics (np. FACT_ORDER)\n",
+    "- **Dimension Tables:** Kontekst dla fact table (np. DIM_CUSTOMER, DIM_PRODUCT)\n",
+    "\n",
+    "```\n",
+    "┌─────────────────┐      ┌─────────────────┐\n",
+    "│  DIM_CUSTOMER   │      │   DIM_PRODUCT   │\n",
+    "├─────────────────┤      ├─────────────────┤\n",
+    "│ • customer_id   │      │ • product_id    │\n",
+    "│ • first_name    │ N:1│ • order_id (PK) │1:N │ • product_name│\n",
+    "│ • last_name     │──►├─────────────────┤◄──│ • category    │\n",
+    "│ • email         │   1│ • customer_id   │N  │ • price       │\n",
+    "│ • country       │    │ • product_id    │   └───────────────┘\n",
+    "│ • email_valid   │    │ • order_date    │\n",
+    "└─────────────────┘    │ • total_amount  │   ┌─────────────────┐\n",
+    "                       │ • quantity      │   │    DIM_TIME     │\n",
+    "                       │ • unit_price    │1:N├─────────────────┤\n",
+    "                       │ • payment_method│◄──│ • order_date    │\n",
+    "                       │ • is_high_value │   │ • year/month/qtr│\n",
+    "                       └─────────────────┘   │ • day_of_week   │\n",
+    "                                              └─────────────────┘\n",
+    "```\n",
+    "\n",
+    "**Relacje:**\n",
+    "- **FACT_ORDER** (central fact table) - każdy rząd = jedna transakcja\n",
+    "- **DIM_CUSTOMER** → FACT_ORDER: 1:N (jeden klient, wiele zamówień)\n",
+    "- **DIM_PRODUCT** → FACT_ORDER: 1:N (jeden produkt, wiele zamówień)  \n",
+    "- **DIM_TIME** → FACT_ORDER: 1:N (jedna data, wiele zamówień)\n",
+    "\n",
+    "**Dlaczego Star Schema?**\n",
+    "1. **Performance**: Proste joiny, łatwa optymalizacja dla BI tools\n",
+    "2. **Czytelność**: Intuicyjna struktura (fact = zdarzenie, dim = kontekst)\n",
+    "3. **Flexibilność**: Łatwe dodawanie nowych dimensions bez zmiany fact table\n",
+    "4. **Agregacje**: BI tools mogą łatwo grupować po dimensions\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Dlaczego to ważne?\n",
+    "\n",
+    "Production data pipeline musi:\n",
+    "- **Skalować się:** Obsługa TB+ danych\n",
+    "- **Być niezawodny:** Error handling, monitoring\n",
+    "- **Być audytowalny:** Lineage, data quality metrics\n",
+    "- **Być szybki:** Incremental processing, partitioning"
    ]
   },
   {
@@ -622,7 +703,12 @@
    "source": [
     "### Przykład 2.1: Silver Orders - Cleansing & Validation\n",
     "\n",
-    "**Cel:** Transformacja Bronze Orders → Silver z quality checks"
+    "**Cel:** Transformacja Bronze Orders → Silver z quality checks\n",
+    "\n",
+    "**Uwaga dotycząca danych customers:**\n",
+    "- Dataset zawiera: `first_name`, `last_name` (osobne kolumny)\n",
+    "- W Silver tworzymy: `customer_name` = CONCAT(first_name, ' ', last_name)\n",
+    "- `customer_name` to computed field dla wygody BI/analytics"
    ]
   },
   {
@@ -802,7 +888,8 @@
     "    customers_bronze_df\n",
     "    .dropDuplicates([\"customer_id\"])\n",
     "    .filter(F.col(\"customer_id\").isNotNull())\n",
-    "    .filter(F.col(\"customer_name\").isNotNull())\n",
+    "    .filter(F.col(\"first_name\").isNotNull())  # Zmiana: first_name zamiast customer_name\n",
+    "    .filter(F.col(\"last_name\").isNotNull())   # Dodane: last_name też musi istnieć\n",
     ")\n",
     "\n",
     "print(f\"\\n✓ Po deduplikacji i walidacji: {customers_clean.count()} rekordów\")\n",
@@ -845,8 +932,14 @@
     "customers_standardized = (\n",
     "    customers_clean\n",
     "    \n",
-    "    # Standaryzacja text fields\n",
-    "    .withColumn(\"customer_name\", F.trim(F.col(\"customer_name\")))\n",
+    "    # Standaryzacja name fields\n",
+    "    .withColumn(\"first_name\", F.trim(F.initcap(F.col(\"first_name\"))))\n",
+    "    .withColumn(\"last_name\", F.trim(F.initcap(F.col(\"last_name\"))))\n",
+    "    \n",
+    "    # Tworzenie customer_name z first_name + last_name (dla BI/analytics)\n",
+    "    .withColumn(\"customer_name\", F.concat_ws(\" \", F.col(\"first_name\"), F.col(\"last_name\")))\n",
+    "    \n",
+    "    # Standaryzacja innych pól\n",
     "    .withColumn(\"email\", F.lower(F.trim(F.col(\"email\"))))\n",
     "    .withColumn(\"country\", F.upper(F.trim(F.col(\"country\"))))\n",
     "    \n",
@@ -863,7 +956,7 @@
     "print(\"=== Silver Customers - Po standaryzacji ===\")\n",
     "print(f\"Liczba rekordów: {customers_standardized.count()}\")\n",
     "print(\"\\nPrzykładowe dane:\")\n",
-    "display(customers_standardized.select(\"customer_id\", \"customer_name\", \"email\", \"email_valid\", \"country\").limit(5))"
+    "display(customers_standardized.select(\"customer_id\", \"first_name\", \"last_name\", \"customer_name\", \"email\", \"email_valid\", \"country\").limit(5))"
    ]
   },
   {
@@ -1194,7 +1287,105 @@
    "source": [
     "### Przykład 3.1: Gold - Order Fact Table (Denormalized)\n",
     "\n",
-    "**Cel:** Utworzenie denormalized fact table z joinami do dimensions"
+    "**Cel:** Utworzenie denormalized fact table z joinami do dimensions\n",
+    "\n",
+    "### Nasza implementacja Star Schema dla e-commerce\n",
+    "\n",
+    "W tym notebooku zbudujemy następujący model:\n",
+    "\n",
+    "#### **FACT_ORDER** (Central Fact Table)\n",
+    "**Typ:** Transaction fact table (każdy rząd = jedna transakcja)\n",
+    "\n",
+    "**Kolumny:**\n",
+    "- **Keys:** `order_id` (PK), `customer_id` (FK), `product_id` (FK)\n",
+    "- **Measures (metryki):** `total_amount`, `quantity`, `unit_price`\n",
+    "- **Time dimensions:** `order_date`, `order_year`, `order_month`, `order_quarter`, `day_of_week`\n",
+    "- **Flags:** `is_high_value`, `order_value_category`, `payment_method`\n",
+    "- **Denormalized dimensions:** `customer_name` (computed: first_name + last_name), `country` (z DIM_CUSTOMER)\n",
+    "\n",
+    "**Grain (granularność):** Jedna transakcja = jeden produkt w jednym zamówieniu\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **DIM_CUSTOMER** (Dimension Table)\n",
+    "**Typ:** Slowly Changing Dimension (SCD Type 1 - overwrite)\n",
+    "\n",
+    "**Kolumny:**\n",
+    "- `customer_id` (PK)\n",
+    "- `first_name`, `last_name`\n",
+    "- `customer_name` (computed: first_name + last_name)\n",
+    "- `email`, `email_valid`\n",
+    "- `country`\n",
+    "- `_silver_processed_timestamp`\n",
+    "\n",
+    "**Relacja do FACT_ORDER:** 1:N (jeden klient, wiele zamówień)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **DIM_PRODUCT** (Dimension Table)\n",
+    "**Typ:** Slowly Changing Dimension (SCD Type 1)\n",
+    "\n",
+    "**Kolumny:**\n",
+    "- `product_id` (PK)\n",
+    "- `product_name`\n",
+    "- `category`\n",
+    "- `price`\n",
+    "- `_silver_processed_timestamp`\n",
+    "\n",
+    "**Relacja do FACT_ORDER:** 1:N (jeden produkt, wiele zamówień)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **DIM_TIME** (Dimension Table - implicit)\n",
+    "W naszym przypadku time dimensions są denormalizowane w FACT_ORDER:\n",
+    "- `order_date` (date)\n",
+    "- `order_year`, `order_month`, `order_quarter` (partitioning keys)\n",
+    "- `order_day_of_week` (dla weekly patterns)\n",
+    "\n",
+    "**Relacja do FACT_ORDER:** 1:N (jedna data, wiele zamówień)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Denormalizacja vs Normalizacja\n",
+    "\n",
+    "**W tym notebooku używamy denormalizacji:**\n",
+    "\n",
+    "✅ **Denormalizacja (nasz approach):**\n",
+    "```\n",
+    "FACT_ORDER (denormalized):\n",
+    "- order_id, customer_id, customer_name (first_name + last_name), country, product_id, \n",
+    "  order_date, total_amount, payment_method, ...\n",
+    "```\n",
+    "\n",
+    "**Zalety:**\n",
+    "- ✅ Szybkie queries - brak joinsów dla customer_name/country\n",
+    "- ✅ Proste dla BI tools\n",
+    "- ✅ Mniej contention na dimension tables\n",
+    "\n",
+    "**Wady:**\n",
+    "- ⚠️ Większy storage (duplikacja customer_name, country)\n",
+    "- ⚠️ Stale data (jeśli customer zmieni country, stare orders mają stary country)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "❌ **Normalizacja (alternatywny approach):**\n",
+    "```\n",
+    "FACT_ORDER (normalized):\n",
+    "- order_id, customer_id, product_id, order_date, total_amount, ...\n",
+    "\n",
+    "DIM_CUSTOMER (lookup):\n",
+    "- customer_id, first_name, last_name, country, ...\n",
+    "```\n",
+    "\n",
+    "**Kiedy używać denormalizacji?**\n",
+    "- High-performance analytics (BI dashboards)\n",
+    "- Data warehouse / OLAP workloads\n",
+    "- Dimensions change rarely\n",
+    "\n",
+    "**Kiedy używać normalizacji?**\n",
+    "- OLTP workloads (transactional systems)\n",
+    "- Data integrity is critical\n",
+    "- Storage cost is high"
    ]
   },
   {
