Refactor Day 2: Split batch/streaming ingestion + new Medallion Architecture notebook
- New: 02_batch_data_ingestion.ipynb (COPY INTO, CTAS, file formats, error handling)
- New: 03_streaming_data_ingestion.ipynb (Structured Streaming, Auto Loader, watermarking, checkpoints, trigger modes)
- New: 04_medallion_architecture.ipynb (Bronze→Silver→Gold pipeline with SCD Type 1/2 implementation)
- Updated: 05_optimization_best_practices.ipynb
- Updated: 02_lakeflow_pipelines.ipynb
- Added: KION_TRAINING_STRUCTURE_FINAL.md (complete training structure)
- Moved old notebooks to _old/ directory for reference

--- a/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
@@ -170,10 +170,10 @@
     "\n",
     "print(\"=== Podstawowy plan zapytania ===\")\n",
     "simple_query = spark.sql(f\"\"\"\n",
-    "    SELECT customer_id, first_name, last_name, account_value\n",
+    "    SELECT customer_id, first_name, last_name, customer_segment, city\n",
     "    FROM {CUSTOMERS_DELTA}\n",
-    "    WHERE account_value > 1000\n",
-    "    ORDER BY account_value DESC\n",
+    "    WHERE customer_segment = 'Premium'\n",
+    "    ORDER BY customer_id DESC\n",
     "    LIMIT 10\n",
     "\"\"\")\n",
     "\n",
