Fix: Poprawiono schematy w notebookach zgodnie z dataset KION
- 02_batch_data_ingestion.ipynb: Całkowicie przebudowany od zera
  * Poprawiono schema customers: usunięto nieistniejące kolumny (address, zip_code)
  * Poprawiono schema orders: order_datetime zamiast order_date, dodano wszystkie kolumny
  * Poprawiono schema products: subcategory_code, unit_cost, list_price, weight_kg, status
  * Dodano kompleksowe przykłady COPY INTO dla CSV, JSON, Parquet
  * Dodano sekcje: Schema Management, Error Handling, CTAS transformations
  * Dodano Best Practices i Quick Reference Card

- 01_delta_lake_operations.ipynb: Dodano sekcję Change Data Feed (CDF)
  * Teoria CDF: change types, use cases, architektura
  * Przykład 7.1: Włączenie CDF i operacje CRUD
  * Przykład 7.2: Odczyt CDF (PySpark i SQL API)
  * Przykład 7.3: Incremental ETL use case z CDF

- Backup: Stary notebook zapisany w _old/02_batch_data_ingestion_old.ipynb

--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -1801,6 +1801,94 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Sekcja 7: Change Data Feed (CDF)\n",
+    "\n",
+    "**Wprowadzenie teoretyczne:**\n",
+    "\n",
+    "**Change Data Feed (CDF)** to feature Delta Lake umożliwiający śledzenie wszystkich zmian (inserts, updates, deletes) w tabeli Delta. CDF rejestruje:\n",
+    "- **Typ zmiany**: insert, update_preimage, update_postimage, delete\n",
+    "- **Zmienione dane**: before/after values\n",
+    "- **Metadata**: version, timestamp operacji\n",
+    "\n",
+    "**Kluczowe koncepty:**\n",
+    "\n",
+    "**1. Change Types:**\n",
+    "```\n",
+    "- insert: Nowy rekord dodany\n",
+    "- update_preimage: Stan rekordu PRZED update\n",
+    "- update_postimage: Stan rekordu PO update\n",
+    "- delete: Rekord usunięty\n",
+    "```\n",
+    "\n",
+    "**2. CDF vs Time Travel:**\n",
+    "| Feature | Time Travel | Change Data Feed |\n",
+    "|---------|-------------|------------------|\n",
+    "| **Use Case** | Snapshot całej tabeli | Tylko zmiany (delta) |\n",
+    "| **Performance** | Odczyt całej tabeli | Odczyt tylko zmian |\n",
+    "| **Format** | Full table | Change rows only |\n",
+    "| **Best For** | Rollback, audit | Incremental ETL, CDC |\n",
+    "\n",
+    "**3. Kiedy używać CDF:**\n",
+    "- ✅ **Incremental ETL**: Process tylko nowe/zmienione rekordy\n",
+    "- ✅ **CDC (Change Data Capture)**: Replikacja zmian do downstream systems\n",
+    "- ✅ **Audit trail**: Pełna historia zmian dla compliance\n",
+    "- ✅ **Materialized views**: Incrementally refresh aggregates\n",
+    "- ✅ **Event streaming**: Publish changes to Kafka/EventHub\n",
+    "\n",
+    "**4. CDF Architecture:**\n",
+    "```\n",
+    "Delta Table → CDF Enabled → Change Log\n",
+    "                                ↓\n",
+    "              Read via table_changes() function\n",
+    "                                ↓\n",
+    "           INSERT/UPDATE/DELETE events\n",
+    "```\n",
+    "\n",
+    "**Włączenie CDF:**\n",
+    "```sql\n",
+    "-- Method 1: Przy tworzeniu tabeli\n",
+    "CREATE TABLE table_name (...) \n",
+    "TBLPROPERTIES (delta.enableChangeDataFeed = true);\n",
+    "\n",
+    "-- Method 2: Dla istniejącej tabeli\n",
+    "ALTER TABLE table_name \n",
+    "SET TBLPROPERTIES (delta.enableChangeDataFeed = true);\n",
+    "```\n",
+    "\n",
+    "**Odczyt CDF:**\n",
+    "```python\n",
+    "# PySpark API\n",
+    "changes_df = spark.read.format(\"delta\") \\\n",
+    "    .option(\"readChangeFeed\", \"true\") \\\n",
+    "    .option(\"startingVersion\", 0) \\\n",
+    "    .table(\"table_name\")\n",
+    "\n",
+    "# SQL API\n",
+    "SELECT * FROM table_changes('table_name', 0)  -- Od wersji 0\n",
+    "SELECT * FROM table_changes('table_name', 0, 10)  -- Od wersji 0 do 10\n",
+    "```\n",
+    "\n",
+    "**Change Schema:**\n",
+    "```\n",
+    "Standard columns + CDF metadata:\n",
+    "- _change_type: insert | update_preimage | update_postimage | delete\n",
+    "- _commit_version: Version number\n",
+    "- _commit_timestamp: Timestamp operacji\n",
+    "```\n",
+    "\n",
+    "**Best Practices:**\n",
+    "1. **Enable CDF early**: Najlepiej przy CREATE TABLE (nie można odzyskać historii sprzed włączenia)\n",
+    "2. **Incremental reads**: Używaj `startingVersion`/`endingVersion` dla efficiency\n",
+    "3. **Storage overhead**: CDF dodaje ~30% storage (change data stored separately)\n",
+    "4. **Retention**: CDF podlega tej samej retention policy co VACUUM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -2014,6 +2102,311 @@
     "# print(\"✓ Tabele usunięte\")\n",
     "\n",
     "print(\"Cleanup wyłączony (odkomentuj kod aby usunąć tabele)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 7.1: Włączenie Change Data Feed\n",
+    "\n",
+    "**Cel:** Włączenie CDF dla tabeli orders_delta i wykonanie operacji CRUD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 7.1 - Włączenie Change Data Feed\n",
+    "\n",
+    "# Krok 1: Sprawdź czy CDF jest włączony\n",
+    "print(\"=== Sprawdzenie stanu CDF ===\")\n",
+    "table_props = spark.sql(f\"SHOW TBLPROPERTIES {ORDERS_DELTA}\").collect()\n",
+    "cdf_enabled = any(row['key'] == 'delta.enableChangeDataFeed' and row['value'] == 'true' for row in table_props)\n",
+    "\n",
+    "print(f\"CDF włączony: {cdf_enabled}\")\n",
+    "\n",
+    "# Krok 2: Włącz CDF\n",
+    "if not cdf_enabled:\n",
+    "    spark.sql(f\"\"\"\n",
+    "        ALTER TABLE {ORDERS_DELTA}\n",
+    "        SET TBLPROPERTIES (delta.enableChangeDataFeed = true)\n",
+    "    \"\"\")\n",
+    "    print(\"\\n✓ CDF włączony dla tabeli orders_delta\")\n",
+    "else:\n",
+    "    print(\"\\n✓ CDF już był włączony\")\n",
+    "\n",
+    "# Krok 3: Zapisz aktualną wersję (punkt startowy dla CDF)\n",
+    "history = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\")\n",
+    "start_version = history.agg({\"version\": \"max\"}).collect()[0][0] + 1\n",
+    "\n",
+    "print(f\"\\nStart version dla CDF tracking: {start_version}\")\n",
+    "print(\"Wszystkie operacje od tej wersji będą tracked przez CDF\")\n",
+    "\n",
+    "# Krok 4: Wykonaj operacje CRUD dla demonstracji CDF\n",
+    "\n",
+    "# A. INSERT - dodaj nowe zamówienia\n",
+    "print(\"\\n=== Operacja 1: INSERT (nowe zamówienia) ===\")\n",
+    "new_orders = spark.createDataFrame([\n",
+    "    (\"ORD_CDF_001\", \"CUST001234\", \"PROD000123\", \"STORE010\", \"2025-01-22T10:00:00\", \n",
+    "     5, 99.99, 10, 449.96, \"Credit Card\"),\n",
+    "    (\"ORD_CDF_002\", \"CUST001235\", \"PROD000456\", \"STORE020\", \"2025-01-22T11:30:00\", \n",
+    "     2, 149.50, 5, 284.05, \"Debit Card\")\n",
+    "], [\"order_id\", \"customer_id\", \"product_id\", \"store_id\", \"order_datetime\",\n",
+    "    \"quantity\", \"unit_price\", \"discount_percent\", \"total_amount\", \"payment_method\"])\n",
+    "\n",
+    "new_orders.write.mode(\"append\").saveAsTable(ORDERS_DELTA)\n",
+    "print(\"✓ INSERT: 2 nowe zamówienia dodane\")\n",
+    "\n",
+    "# B. UPDATE - zmień payment_method\n",
+    "print(\"\\n=== Operacja 2: UPDATE (zmiana payment_method) ===\")\n",
+    "spark.sql(f\"\"\"\n",
+    "    UPDATE {ORDERS_DELTA}\n",
+    "    SET payment_method = 'Cash', total_amount = 400.00\n",
+    "    WHERE order_id = 'ORD_CDF_001'\n",
+    "\"\"\")\n",
+    "print(\"✓ UPDATE: Zmieniono payment_method i total_amount dla ORD_CDF_001\")\n",
+    "\n",
+    "# C. DELETE - usuń zamówienie\n",
+    "print(\"\\n=== Operacja 3: DELETE (usunięcie zamówienia) ===\")\n",
+    "spark.sql(f\"\"\"\n",
+    "    DELETE FROM {ORDERS_DELTA}\n",
+    "    WHERE order_id = 'ORD_CDF_002'\n",
+    "\"\"\")\n",
+    "print(\"✓ DELETE: Usunięto zamówienie ORD_CDF_002\")\n",
+    "\n",
+    "# Krok 5: Sprawdź historię zmian\n",
+    "end_version = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\").agg({\"version\": \"max\"}).collect()[0][0]\n",
+    "\n",
+    "print(f\"\\n=== Podsumowanie operacji ===\")\n",
+    "print(f\"Start version: {start_version}\")\n",
+    "print(f\"End version: {end_version}\")\n",
+    "print(f\"Liczba transakcji tracked: {end_version - start_version + 1}\")\n",
+    "print(\"\\nOperacje wykonane:\")\n",
+    "print(\"  1. INSERT (2 records)\")\n",
+    "print(\"  2. UPDATE (1 record)\")\n",
+    "print(\"  3. DELETE (1 record)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 7.2: Odczyt Change Data Feed\n",
+    "\n",
+    "**Cel:** Odczyt i analiza zmian z CDF - wszystkie typy change events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 7.2 - Odczyt Change Data Feed\n",
+    "\n",
+    "# Metoda 1: PySpark API (readChangeFeed)\n",
+    "print(\"=== Metoda 1: PySpark API ===\")\n",
+    "\n",
+    "# Odczytaj zmiany od start_version\n",
+    "changes_df = (spark.read\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"readChangeFeed\", \"true\")\n",
+    "    .option(\"startingVersion\", start_version)\n",
+    "    .table(ORDERS_DELTA)\n",
+    ")\n",
+    "\n",
+    "print(f\"Liczba change events: {changes_df.count()}\")\n",
+    "print(\"\\nSchema CDF (zauważ dodatkowe kolumny _change_type, _commit_version, _commit_timestamp):\")\n",
+    "changes_df.printSchema()\n",
+    "\n",
+    "# Wyświetl wszystkie zmiany\n",
+    "print(\"\\n=== Wszystkie change events ===\")\n",
+    "display(\n",
+    "    changes_df\n",
+    "    .select(\n",
+    "        \"order_id\", \"customer_id\", \"total_amount\", \"payment_method\",\n",
+    "        \"_change_type\", \"_commit_version\", \"_commit_timestamp\"\n",
+    "    )\n",
+    "    .orderBy(\"_commit_version\", \"_change_type\")\n",
+    ")\n",
+    "\n",
+    "# Analiza po typach zmian\n",
+    "print(\"\\n=== Podsumowanie zmian po typach ===\")\n",
+    "change_summary = changes_df.groupBy(\"_change_type\").count().orderBy(\"_change_type\")\n",
+    "display(change_summary)\n",
+    "\n",
+    "# Wyjaśnienie typów zmian\n",
+    "print(\"\\n=== Wyjaśnienie _change_type ===\")\n",
+    "print(\"• insert: Nowy rekord dodany (2 records)\")\n",
+    "print(\"• update_preimage: Stan rekordu PRZED update (1 record)\")\n",
+    "print(\"• update_postimage: Stan rekordu PO update (1 record)\")\n",
+    "print(\"• delete: Rekord usunięty (1 record)\")\n",
+    "print(\"\\nRazem: 5 change events dla 3 operacji (INSERT, UPDATE, DELETE)\")\n",
+    "\n",
+    "# Metoda 2: SQL API (table_changes)\n",
+    "print(\"\\n=== Metoda 2: SQL API (table_changes) ===\")\n",
+    "\n",
+    "changes_sql = spark.sql(f\"\"\"\n",
+    "    SELECT \n",
+    "        order_id,\n",
+    "        total_amount,\n",
+    "        payment_method,\n",
+    "        _change_type,\n",
+    "        _commit_version,\n",
+    "        _commit_timestamp\n",
+    "    FROM table_changes('{ORDERS_DELTA}', {start_version})\n",
+    "    ORDER BY _commit_version, _change_type\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"SQL API zwraca te same dane:\")\n",
+    "display(changes_sql)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 7.3: Use Case - Incremental ETL z CDF\n",
+    "\n",
+    "**Cel:** Demonstracja praktycznego użycia CDF dla incremental processing\n",
+    "\n",
+    "**Scenario:** \n",
+    "- Source table (orders_delta) zmienia się często\n",
+    "- Target table (orders_summary) agreguje zamówienia\n",
+    "- Chcemy aktualizować summary tylko dla zmienionych rekordów (nie full refresh!)\n",
+    "\n",
+    "**Podejście:**\n",
+    "1. Read CDF od ostatniej processed version\n",
+    "2. Process tylko changed records\n",
+    "3. Update target table incrementally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 7.3 - Incremental ETL z CDF\n",
+    "\n",
+    "print(\"=== Use Case: Incremental ETL z CDF ===\\n\")\n",
+    "\n",
+    "# Krok 1: Przygotuj target table (orders_summary)\n",
+    "ORDERS_SUMMARY = f\"{GOLD_SCHEMA}.orders_summary_cdf\"\n",
+    "\n",
+    "# Initial load - full aggregation (tylko raz)\n",
+    "print(\"Krok 1: Initial load (full aggregation)\")\n",
+    "initial_summary = (spark.table(ORDERS_DELTA)\n",
+    "    .groupBy(\"customer_id\", \"payment_method\")\n",
+    "    .agg(\n",
+    "        F.count(\"*\").alias(\"order_count\"),\n",
+    "        F.sum(\"total_amount\").alias(\"total_spent\"),\n",
+    "        F.avg(\"total_amount\").alias(\"avg_order_value\")\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "initial_summary.write.format(\"delta\").mode(\"overwrite\").saveAsTable(ORDERS_SUMMARY)\n",
+    "print(f\"✓ Utworzono {ORDERS_SUMMARY}\")\n",
+    "print(f\"  Records: {spark.table(ORDERS_SUMMARY).count()}\")\n",
+    "\n",
+    "# Zapisz last processed version\n",
+    "last_processed_version = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\") \\\n",
+    "    .agg({\"version\": \"max\"}).collect()[0][0]\n",
+    "print(f\"  Last processed version: {last_processed_version}\\n\")\n",
+    "\n",
+    "# Krok 2: Symulacja nowych zmian w source table\n",
+    "print(\"Krok 2: Symulacja nowych zmian w orders_delta\")\n",
+    "\n",
+    "# Dodaj nowe zamówienia\n",
+    "new_orders_2 = spark.createDataFrame([\n",
+    "    (\"ORD_CDF_003\", \"CUST001234\", \"PROD000789\", \"STORE030\", \"2025-01-23T09:00:00\", \n",
+    "     3, 66.66, 0, 199.98, \"Credit Card\"),\n",
+    "    (\"ORD_CDF_004\", \"CUST001236\", \"PROD000111\", \"STORE040\", \"2025-01-23T10:00:00\", \n",
+    "     1, 299.99, 15, 254.99, \"Cash\")\n",
+    "], [\"order_id\", \"customer_id\", \"product_id\", \"store_id\", \"order_datetime\",\n",
+    "    \"quantity\", \"unit_price\", \"discount_percent\", \"total_amount\", \"payment_method\"])\n",
+    "\n",
+    "new_orders_2.write.mode(\"append\").saveAsTable(ORDERS_DELTA)\n",
+    "print(\"✓ Dodano 2 nowe zamówienia\\n\")\n",
+    "\n",
+    "# Krok 3: Incremental processing z CDF\n",
+    "print(\"Krok 3: Incremental processing (tylko zmiany!)\")\n",
+    "\n",
+    "current_version = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\") \\\n",
+    "    .agg({\"version\": \"max\"}).collect()[0][0]\n",
+    "\n",
+    "# Read tylko changes od last processed version\n",
+    "changes_incremental = (spark.read\n",
+    "    .format(\"delta\")\n",
+    "    .option(\"readChangeFeed\", \"true\")\n",
+    "    .option(\"startingVersion\", last_processed_version + 1)\n",
+    "    .table(ORDERS_DELTA)\n",
+    ")\n",
+    "\n",
+    "print(f\"CDF changes (versions {last_processed_version + 1} to {current_version}):\")\n",
+    "print(f\"  Change events: {changes_incremental.count()}\")\n",
+    "\n",
+    "# Filter tylko inserts (dla simplicity - w production obsłużyć update/delete)\n",
+    "inserts_only = changes_incremental.filter(F.col(\"_change_type\") == \"insert\")\n",
+    "\n",
+    "if inserts_only.count() > 0:\n",
+    "    # Compute incremental aggregates\n",
+    "    incremental_agg = (inserts_only\n",
+    "        .groupBy(\"customer_id\", \"payment_method\")\n",
+    "        .agg(\n",
+    "            F.count(\"*\").alias(\"order_count\"),\n",
+    "            F.sum(\"total_amount\").alias(\"total_spent\"),\n",
+    "            F.avg(\"total_amount\").alias(\"avg_order_value\")\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"  Incremental aggregates: {incremental_agg.count()} rows\")\n",
+    "    display(incremental_agg)\n",
+    "    \n",
+    "    # MERGE incremental aggregates into summary table\n",
+    "    from delta.tables import DeltaTable\n",
+    "    \n",
+    "    summary_table = DeltaTable.forName(spark, ORDERS_SUMMARY)\n",
+    "    \n",
+    "    (summary_table.alias(\"target\")\n",
+    "        .merge(\n",
+    "            incremental_agg.alias(\"source\"),\n",
+    "            \"target.customer_id = source.customer_id AND target.payment_method = source.payment_method\"\n",
+    "        )\n",
+    "        .whenMatchedUpdate(set = {\n",
+    "            \"order_count\": \"target.order_count + source.order_count\",\n",
+    "            \"total_spent\": \"target.total_spent + source.total_spent\",\n",
+    "            \"avg_order_value\": \"(target.total_spent + source.total_spent) / (target.order_count + source.order_count)\"\n",
+    "        })\n",
+    "        .whenNotMatchedInsert(values = {\n",
+    "            \"customer_id\": \"source.customer_id\",\n",
+    "            \"payment_method\": \"source.payment_method\",\n",
+    "            \"order_count\": \"source.order_count\",\n",
+    "            \"total_spent\": \"source.total_spent\",\n",
+    "            \"avg_order_value\": \"source.avg_order_value\"\n",
+    "        })\n",
+    "        .execute()\n",
+    "    )\n",
+    "    \n",
+    "    print(\"\\n✓ Incremental MERGE wykonany!\")\n",
+    "else:\n",
+    "    print(\"  Brak nowych insertów do przetworzenia\")\n",
+    "\n",
+    "# Krok 4: Weryfikacja\n",
+    "print(\"\\n=== Podsumowanie ===\")\n",
+    "print(f\"✅ Incremental ETL zakończony pomyślnie!\")\n",
+    "print(f\"   Przetworzone wersje: {last_processed_version + 1} → {current_version}\")\n",
+    "print(f\"   Tylko {inserts_only.count()} change events (nie full table scan!)\")\n",
+    "print(f\"\\n💡 Korzyści CDF:\")\n",
+    "print(f\"   • Performance: Odczyt tylko zmian (nie full table)\")\n",
+    "print(f\"   • Efficiency: Incremental processing\")\n",
+    "print(f\"   • Scalability: Działa dla billion-row tables\")\n",
+    "\n",
+    "print(\"\\n=== Orders Summary (po incremental update) ===\")\n",
+    "display(spark.table(ORDERS_SUMMARY).orderBy(F.desc(\"total_spent\")))"
    ]
   }
  ],
